Fixing h2 not showing.

--- a/src/App.scss
+++ b/src/App.scss
@@ -48,16 +48,12 @@ br {
 
 .personalDetails {
   position: absolute;
-  top: 40%;
+  top: 35%;
   left: 20%;
 
   h1 {
     font-size: 5rem;
     font-weight: 800;
-  }
-
-  h2 {
-    opacity: 70%;
   }
 }
 
